// Vitest Snapshot v1

exports[`Pensjonsavtaler > Gitt at brukeren har samtykket > rendrer riktig med avtaler som bare har start dato 1`] = `
<DocumentFragment>
  <div
    class="navds-accordion__item"
    data-testid="pensjonsavtaler"
  >
    <button
      aria-expanded="false"
      class="navds-accordion__header"
      data-testid="accordion-header"
      type="button"
    >
      <div
        class="navds-accordion__icon-wrapper"
      >
        <svg
          aria-hidden="true"
          aria-labelledby="title-r8"
          class="navds-accordion__header-chevron"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="title-r8"
          >
            Vis mer
          </title>
          <path
            clip-rule="evenodd"
            d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="navds-accordion__header-content navds-heading navds-heading--small"
      >
        Pensjonsavtaler: 
        <span
          class="_details_c03039"
        >
          2
        </span>
      </span>
    </button>
    <div
      class="navds-accordion__content navds-accordion__content--closed _content_e53ef6 navds-body-long"
    >
      <table
        class="_tabell_c8f064"
      >
        <thead>
          <tr>
            <th
              class="_tabellHeader_c8f064"
            >
              Pensjonsavtale
            </th>
            <th
              class="_tabellHeader_c8f064 _tabellHeader__Right_c8f064"
            >
              Årlig beløp
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="_tabellCell_c8f064"
              colspan="2"
            >
              <p
                class="_mellomtittel_c8f064 navds-body-short"
              >
                Privat tjenestepensjon
              </p>
            </td>
          </tr>
          <tr>
            <td
              class="_tabellCell_c8f064"
            >
              <p
                class="navds-body-short"
              >
                Fra DNB
              </p>
              <p
                class="_utbetaling_c8f064 navds-body-short"
              >
                Livsvarig utbetaling fra 67 år.
              </p>
            </td>
            <td
              class="_tabellCell_c8f064 _tabellCell__Right_c8f064"
            >
              <p
                class="navds-body-short"
              >
                12 345 kr
              </p>
            </td>
          </tr>
          <tr>
            <td
              class="_tabellCell_c8f064"
            >
              <p
                class="navds-body-short"
              >
                Fra DNB
              </p>
              <p
                class="_utbetaling_c8f064 navds-body-short"
              >
                Livsvarig utbetaling fra 67 år og 6 mnd.
              </p>
            </td>
            <td
              class="_tabellCell_c8f064 _tabellCell__Right_c8f064"
            >
              <p
                class="navds-body-short"
              >
                12 345 kr
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <p
        class="_paragraph_c8f064 navds-body-long navds-body-long--small"
      >
        Alle avtaler i privat sektor er hentet fra 
        <a
          class="navds-link navds-link--action"
          href="https://norskpensjon.no/"
        >
          Norsk Pensjon
        </a>
        . Du kan ha andre avtaler enn det som finnes i Norsk Pensjon. Kontakt aktuell pensjonsordning.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pensjonsavtaler > Gitt at brukeren har samtykket > rendrer riktig med avtaler som har både start- og sluttdato 1`] = `
<DocumentFragment>
  <div
    class="navds-accordion__item"
    data-testid="pensjonsavtaler"
  >
    <button
      aria-expanded="false"
      class="navds-accordion__header"
      data-testid="accordion-header"
      type="button"
    >
      <div
        class="navds-accordion__icon-wrapper"
      >
        <svg
          aria-hidden="true"
          aria-labelledby="title-ra"
          class="navds-accordion__header-chevron"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="title-ra"
          >
            Vis mer
          </title>
          <path
            clip-rule="evenodd"
            d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="navds-accordion__header-content navds-heading navds-heading--small"
      >
        Pensjonsavtaler: 
        <span
          class="_details_c03039"
        >
          1
        </span>
      </span>
    </button>
    <div
      class="navds-accordion__content navds-accordion__content--closed _content_e53ef6 navds-body-long"
    >
      <table
        class="_tabell_c8f064"
      >
        <thead>
          <tr>
            <th
              class="_tabellHeader_c8f064"
            >
              Pensjonsavtale
            </th>
            <th
              class="_tabellHeader_c8f064 _tabellHeader__Right_c8f064"
            >
              Årlig beløp
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="_tabellCell_c8f064"
              colspan="2"
            >
              <p
                class="_mellomtittel_c8f064 navds-body-short"
              >
                Privat tjenestepensjon
              </p>
            </td>
          </tr>
          <tr>
            <td
              class="_tabellCell_c8f064"
            >
              <p
                class="navds-body-short"
              >
                Fra DNB
              </p>
              <p
                class="_utbetaling_c8f064 navds-body-short"
              >
                12 345 kr utbetales fra 67 år til 77 år og 8 mnd.
              </p>
              <p
                class="_utbetaling_c8f064 navds-body-short"
              >
                12 345 kr utbetales fra 67 år og 6 mnd. til 77 år.
              </p>
            </td>
            <td
              class="_tabellCell_c8f064 _tabellCell__Right_c8f064"
            >
              <p
                class="navds-body-short"
              >
                24 690 kr
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <p
        class="_paragraph_c8f064 navds-body-long navds-body-long--small"
      >
        Alle avtaler i privat sektor er hentet fra 
        <a
          class="navds-link navds-link--action"
          href="https://norskpensjon.no/"
        >
          Norsk Pensjon
        </a>
        . Du kan ha andre avtaler enn det som finnes i Norsk Pensjon. Kontakt aktuell pensjonsordning.
      </p>
    </div>
  </div>
</DocumentFragment>
`;
